// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cra-config when used with react-scripts < 2.1.0 should apply styling webpack rules 1`] = `
Object {
  "devtool": "cheap-eval-source-map",
  "module": Object {
    "noParse": /jquery/,
    "rules": Array [
      Object {
        "include": "app/baseSrc",
        "loader": "babel-loader",
        "options": Object {},
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "exclude": /\\\\\\.module\\\\\\.css\\$/,
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": "style-loader",
      },
      Object {
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": "style-loader",
      },
      Object {
        "exclude": /\\\\\\.module\\\\\\.\\(scss\\|sass\\)\\$/,
        "sideEffects": true,
        "test": /\\\\\\.\\(scss\\|sass\\)\\$/,
        "use": "sass-loader",
      },
      Object {
        "test": /\\\\\\.module\\\\\\.\\(scss\\|sass\\)\\$/,
        "use": "sass-loader",
      },
    ],
  },
  "plugins": Array [
    BaseTestPlugin1 {},
    BaseTestPlugin2 {},
  ],
  "resolve": Object {
    "alias": Object {
      "baseAlias": "base-alias",
    },
    "extensions": Array [
      ".js",
      ".jsx",
    ],
  },
}
`;

exports[`cra-config when used with react-scripts >= 2.1.0 should apply Babel, styling rules and merge plugins 1`] = `
Object {
  "devtool": "cheap-eval-source-map",
  "module": Object {
    "noParse": /jquery/,
    "rules": Array [
      Object {
        "include": "app/baseSrc",
        "loader": "babel-loader",
        "options": Object {},
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "exclude": /\\\\\\.module\\\\\\.css\\$/,
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": "style-loader",
      },
      Object {
        "test": /\\\\\\.module\\\\\\.css\\$/,
        "use": "style-loader",
      },
      Object {
        "exclude": /\\\\\\.module\\\\\\.\\(scss\\|sass\\)\\$/,
        "sideEffects": true,
        "test": /\\\\\\.\\(scss\\|sass\\)\\$/,
        "use": "sass-loader",
      },
      Object {
        "test": /\\\\\\.module\\\\\\.\\(scss\\|sass\\)\\$/,
        "use": "sass-loader",
      },
      Object {
        "include": Array [
          "app/src",
          "/test-project",
        ],
        "loader": "babel-loader",
        "options": Object {},
        "test": /\\\\\\.\\(js\\|mjs\\|jsx\\|ts\\|tsx\\)\\$/,
      },
    ],
  },
  "plugins": Array [
    BaseTestPlugin1 {},
    BaseTestPlugin2 {},
    CRATestPlugin1 {},
    CRATestPlugin2 {},
  ],
  "resolve": Object {
    "alias": Object {
      "baseAlias": "base-alias",
    },
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;
